--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>求职意向: 前端开发工程师</title>
+    <title>叶康_Web前端开发工程师</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run th/div>is app.</noscript>
-    <div id="root"><
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
